@@ -1,6 +1,8 @@
 Changelog for getTables.
 1.11.4-alpha
 - Адаптация под modx3(3.0.1) и pdoTools3.
+- Навигация по таблице с CTRL и стрелочками.
+- Инструкции autosave.refresh.row и autosave.refresh.form.
 
 1.11.3-alpha
 - Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.
